--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^5.0.0"
+    "express": "^5.0.0",
+    "pg": "8.11.0"
   }
 }
